--- a/calculator.html
+++ b/calculator.html
@@ -15,9 +15,7 @@
     <title>Tip Calculator</title>
 </head>
 <body>
-    <p class="title">Welcome to the tip calculator! Let's get started:</p>
-    <a href="calculator.html">
-        <button class="go">Go</button>
-    </a>
+    <p class="title">How much is your bill?</p>
+    <button class="go">Next</Button>
 </body>
 </html>
