continued work on bill

--- a/calculator.html
+++ b/calculator.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playwrite+PL:wght@100..400&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playwrite+NL:wght@100..400&family=Playwrite+PL:wght@100..400&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,12 @@
     <title>Tip Calculator</title>
 </head>
 <body>
-    <p class="title">How much is your bill?</p>
-    <button class="go">Next</Button>
+    <a href="index.html">
+        <button class="back">Back</button>
+    </a>
+    <p class="bill">How much is your bill?</p>
+    <label for="bill"></label>
+<input type="text" id="bill" name="bill">
+    <button class="go">Next</button>
 </body>
 </html>
