basic skeleton added

--- a/people.html
+++ b/people.html
@@ -10,21 +10,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <py-script src="calculator.py"></py-script>
-
     <title>Tip Calculator</title>
 </head>
 <body>
-    <a href="index.html">
+    <a href="percentage.html">
         <button class="back">Back</button>
     </a>
-    <div class="bill-1"> 
-        <p class="bill">How much is your bill?</p>
+    <div class="people-1"> 
+        <p class="people">How many people are you splitting the bill with?</p>
         <label for="bill"></label>
         <input class="text" type="text" id="bill" name="bill">
-            <a href="percentage.html">
-                <button class="next">Next</button>
-            </a>
+            <button class="next">Next</button>
     </div>
 </body>
 </html>
