--- a/percentage.html
+++ b/percentage.html
@@ -15,16 +15,16 @@
     <title>Tip Calculator</title>
 </head>
 <body>
-    <a href="index.html">
+    <a href="calculator.html">
         <button class="back">Back</button>
     </a>
-    <div class="bill-1"> 
-        <p class="bill">How much is your bill?</p>
+    <div class="tip-1"> 
+        <p class="tip">What percentage would you like to tip?</p>
         <label for="bill"></label>
         <input class="text" type="text" id="bill" name="bill">
-            <a href="percentage.html">
-                <button class="next">Next</button>
-            </a>
+        <a href="people.html">
+            <button class="next">Next</button>
+        </a>
     </div>
 </body>
 </html>
